# adaptive-mesh-refinement

./: CMakeLists.txt  README.md
include/: conn_util.h  output.h  quad_util.h  quadtree.h  stencil.h
meshes/: mesh_fn(0.1+2xy)_(1,1,4).tec  quad_fn(0.01+xy)_(1,1,6).tec  quad_fn(0.1+2xy)_(1,1,4).tec
quadstencils/: AAAA.tec  AAAB.tec  AABB.tec  ABAB.tec  ABBB.tec  ABCB.tec  BBBB.tec  BBBC.tec  BBCC.tec
quadstencils/pointfiles/: ABCB.dat~
src/: balance.cpp  conn_util.cpp  diag_neighbors.cpp  duplicate_util.cpp  duplicates.cpp  label.cpp  main.cpp  neighbors.cpp  output.cpp  output.cpp~  quadtree.cpp  rotranscale.cpp  stencil.cpp  stencil.cpp~  strong_balance.cpp
